src/renderer/components/AccountListSidebar/styles.module.scss
@import '../../../../scss/variables';
@import '../../../../scss/mixins';

.avatar {
  --local-avatar-size: 48px;
  --local-avatar-vertical-margin: 8px;
  --local-avatar-font-size: 26px;

  cursor: pointer;
  display: inline-block;
  font-weight: normal;
  height: var(--local-avatar-size);
  margin: var(--local-avatar-vertical-margin) 0;
  position: relative;
  user-select: none;
  width: var(--local-avatar-size);

  div.content,
  img.content {
    height: var(--local-avatar-size);
    width: var(--local-avatar-size);
    border-radius: 100%;
    pointer-events: none;
  }

  div.content {
    background-color: #505050;
    color: var(--avatarLabelColor);
    font-size: var(--local-avatar-font-size);
    line-height: var(--local-avatar-size);
    object-fit: cover;
    text-align: center;
  }

  img.content {
    object-fit: cover;
  }
}

.accountListSidebar {
  --accountSidebarBg: #2c2c2c;

  background-color: var(--accountSidebarBg);
  display: flex;
  flex-direction: column;
  min-width: 66px;
  overflow: hidden;

  .accountList {
    --als-avatar-size: 42px;
    --als-avatar-margin: 5px;
    --als-active-indicator-color: white;

    align-items: center;
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    overflow-y: scroll;
    padding-top: 2px;
    scrollbar-width: 0;

    &::-webkit-scrollbar {
      width: 0;
    }
  }

  .account {
    height: var(--als-avatar-size);
    margin-bottom: var(--als-avatar-margin);
    margin-top: var(--als-avatar-margin);
    position: relative;
    z-index: $z-index-new-local-scope;

    .avatar {
      --local-avatar-size: var(--als-avatar-size);
      --local-avatar-vertical-margin: 0;

      opacity: 0.7;
      transition: opacity ease-in 200ms;

      div.content,
      img.content {
        border-radius: 10%;
      }
    }

    &.active,
    &:hover,
    &.context-menu-active {
      .avatar::before {
        --als-active-indicator-height: 32px;

        background: var(--als-active-indicator-color);
        border-radius: 20px;
        content: ' ';
        height: var(--als-active-indicator-height);
        margin-inline-start: -15.5px;
        overflow: hidden;
        pointer-events: none;
        position: absolute;
        top: calc(
          calc(var(--als-avatar-size) / 2) - calc(
              var(--als-active-indicator-height) / 2
            )
        );
        width: 8px;
      }

      .avatar {
        opacity: 1;
      }
    }

    &:hover {
      .avatar::before {
        --als-active-indicator-height: 15px;
      }
    }

    &.contextMenuActive {
      .avatar::before {
        --als-active-indicator-height: 10px;
        opacity: 0.7;
      }
    }
  }

  .addButton {
    --add-button-color: #808080;

    background: none;
    border-radius: 10%;
    border: 1.3pt solid var(--add-button-color);
    color: var(--add-button-color);
    font-size: 22px;
    margin-bottom: var(--als-avatar-margin);
    margin-top: var(--als-avatar-margin);
    min-height: var(--als-avatar-size);
    min-width: var(--als-avatar-size);

    &:hover {
      color: var(--accountSidebarBg);
      background: var(--add-button-color);
    }
  }
}

.macOSTrafficLightBackground {
  height: 40px;
}

.buttonsContainer {
  align-items: center;
  border-top: 1px #404040 solid;
  display: flex;
  flex-direction: column;
  padding: 8px 0;
}

.settingsButton {
  background-color: transparent;
  border: 0;
  height: 42px;
  margin: 0;
  outline: 0;
  padding: 0;
  width: 42px;

  &:hover {
    .settingsButtonIcon {
      background-color: lightgray;
    }
  }
}

.settingsButtonIcon {
  background-color: gray;
}

.accountBadge {
  bottom: -6px;
  pointer-events: none;
  position: absolute;
  right: -5px;
  z-index: map-get($z-index, account-list-sidebar-scope-account-badge);
}

.accountBadgeIcon {
  background-color: var(--unreadCountBg);
  border-radius: 10px;
  color: var(--unreadCountLabel);
  font-size: 9pt;
  font-weight: bold;
  height: 18px;
  line-height: 18px;
  padding: 0 4pt;
  text-align: center;

  .bgSyncDisabled {
    background-color: grey;
    padding: 0 3pt;
  }

  .muted {
    background-color: grey;
  }
}

.accountMutedIcon {
  background-color: white;
  filter: drop-shadow(0 0 3px black);
  left: 2px;
  pointer-events: none;
  position: absolute;
  top: 2px;
}

.accountHoverInfoContainer {
  position: absolute;
  z-index: map-get($z-index, account-hover-info);
}

.accountHoverInfo {
  background-color: rgb(22, 22, 22);
  border-radius: 4px;
  color: white;
  display: flex;
  flex-direction: column;
  left: 60px;
  padding: 8px;
  top: var(--als-avatar-margin);
}

.hoverInfoProperty {
  font-size: smaller;
  color: rgb(180, 180, 180);
}

.connectivityDot {
  background-color: lightgray;
  border-radius: 100%;
  display: inline-block;
  line-height: 1em;
  margin-inline: 0.15em;
  min-height: 0.7em;
  min-width: 0.7em;
}

.hoverInfoMuteIcon {
  background-color: white;
  position: relative;
  top: 2px;
}

.hoverInfoDisabledIcon {
  display: inline-block;
  text-align: center;
  width: 1em;
}

